--- a/FrontEnd/privacy.html
+++ b/FrontEnd/privacy.html
@@ -22,8 +22,8 @@
                     <div class="dropdown-menu">
                         <ul>
                             <li><a href="login.html">Login</a></li>
-                            <li><a href="#">Diseases</a></li>
-                            <li><a href="#">About </a></li>
+                            <li><a href="/FrontEnd/diseases.html">Diseases</a></li>
+
                         </ul>
                     </div>
 
@@ -35,39 +35,20 @@
                 <li><a href="#">Services<i class="fas fa-caret-down"></i></a>
                     <div class="dropdown-menu">
                         <ul>
-                            <li><a href="doctor.html">Doctors</a></li>
-                            <li><a href="#">Lab reports</a></li>
+                            <li><a href="/FrontEnd/doctor.html">Doctors</a></li>
+                            <li><a href="/FrontEnd/lb.html">Lab reports</a></li>
                             <li><a href="#">Pharmacy</a></li>
-                            <li><a href="#">Payments</a></li>
-                            <li><a href="#">Diseases</a></li>
+                            <li><a href="/FrontEnd/payment.html">Payments</a></li>
                             <li><a href="channeling.html">Channeling</a></li>
                         </ul>
                     </div>
                 </li>
                 <!--        ========================-->
-                <li><a href="#">Contact us<i class="fas fa-caret-down"></i></a>
-
-                    <div class="dropdown-menu">
-                        <ul>
-                            <li><a href="#">Contact</a></li>
-                            <li><a href="#">Customer Care</a></li>
-                            <li><a href="#">Ambulance</a></li>
-                            <li><a href="#">E-mail</a></li>
-
-                        </ul>
-                    </div>
+                <li><a href="/FrontEnd/contact.html">Contact us<i class="fas fa-caret-down"></i></a>
                 </li>
                 <!------------------------>
 
                 <li><a href="#">Feedback<i class="fas fa-caret-down"></i></a>
-
-                    <div class="dropdown-menu">
-                        <ul>
-                            <li><a href="#">Rate us</a></li>
-                            <li><a href="#">Review</a></li>
-
-                        </ul>
-                    </div>
                 </li>
 
                 <!--        -------------------->
@@ -101,7 +82,8 @@
 
         <h3>What Information Do We Collect and How Do We Collect It?</h3><br> We collect information from you when you require to contact us or to use our online payment portals.<br> Any of the information we collect from you may be used in one of the following
         ways: -To personalize your experience (your information helps us to better respond to your individual needs)<br> -To improve our website (we continually strive to improve our website offerings based on the information and feedback we receive from
-        you)<br> -To improve customer service (your information helps us to more effectively respond to your customer service requests and support needs)<br> -To process payment transactions.<br>
+        you)
+        <br> -To improve customer service (your information helps us to more effectively respond to your customer service requests and support needs)<br> -To process payment transactions.<br>
 
         <h3> <br>Where and when is information collected from customers and end users?</h3>
         Sri Lankan heart center will collect personal information that you submit to us.
