Linked all the css files

--- a/FrontEnd/payment.html
+++ b/FrontEnd/payment.html
@@ -7,7 +7,7 @@
     <title>payments</title>
 
     <!-- custom css file link  -->
-    <link rel="stylesheet" href="/CSS/payment.css" />
+    <link rel="stylesheet" href="./CSS/payment.css" />
   </head>
 
   <body>
