--- a/FrontEnd/map.html
+++ b/FrontEnd/map.html
@@ -11,7 +11,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
     />
     <!-- custom css file link  -->
-    <link rel="stylesheet" href="/CSS/map.css" />
+    <link rel="stylesheet" href="./CSS/map.css" />
   </head>
 
   <body>
