--- a/FrontEnd/privacy.html
+++ b/FrontEnd/privacy.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
-    <link rel="stylesheet" href="/CSS/privacy.css" />
+    <link rel="stylesheet" href="./CSS/privacy.css" />
     <title>Privacy Policy</title>
 
 </head>
