linked the images

--- a/index.html
+++ b/index.html
@@ -80,26 +80,26 @@
 
         <div class="filter-gal-par ">
             <div class="gallery_product col-lg-4 col-md-4col-sm-4col-xs-4 filter hdpe ">
-                <img src="/Images/img5.jpg" class="img-responsive ">
+                <img src="./Images/img5.jpg" class="img-responsive ">
             </div>
 
             <div class="gallery_product col-lg-4 col-md-4col-sm-4col-xs-4 filter sprinkle ">
-                <img src="/Images/img2.jpg" class="img-responsive ">
+                <img src="./Images/img2.jpg" class="img-responsive ">
             </div>
 
             <div class="gallery_product col-lg-4 col-md-4col-sm-4col-xs-4 filter hdpe ">
-                <img src="/Images/img7.jpg" class="img-responsive ">
+                <img src="./Images/img7.jpg" class="img-responsive ">
             </div>
             <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter spray ">
-                <img src="/Images/img17.jpg" class="img-responsive ">
+                <img src="./Images/img17.jpg" class="img-responsive ">
             </div>
 
             <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter sprinkle ">
-                <img src="/Images/img14.jpg" class="img-responsive ">
+                <img src="./Images/img14.jpg" class="img-responsive ">
             </div>
 
             <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter spray ">
-                <img src="/Images/img16.jpg " class="img-responsive ">
+                <img src="./Images/img16.jpg " class="img-responsive ">
             </div>
 
         </div>
