--- a/FrontEnd/doctor.html
+++ b/FrontEnd/doctor.html
@@ -5,14 +5,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
-  <link rel="stylesheet" href="/CSS/doctor.css">
+  <link rel="stylesheet" href="../CSS/doctor.css">
   <title>meet your doctor</title>
 </head>
 
 <body>
 
   <section>
-    <?php include("/FrontEnd/navbar.php "); ?>
+    <?php include("../Include/navbar.php "); ?>
 
     <div class="hero">
 
@@ -31,21 +31,21 @@
       <div class="places">
 
         <h2>Dr.Roshan Gunawardana </h2>
-        <img src="/Images/doctor1.jpg" style="width: 250px; height: 250px; border-radius: 12px;">
+        <img src="../Images/doctor1.jpg" style="width: 250px; height: 250px; border-radius: 12px;">
         <br>
         <br>
         <a href="doctor1.html">Select</a>
       </div>
       <div class="places">
         <h2>Dr.Sushani Amarasinghe</h2>
-        <img src="/Images/doctor2.jpg" style="width: 250px; height: 250px; border-radius: 12px;">
+        <img src="../Images/doctor2.jpg" style="width: 250px; height: 250px; border-radius: 12px;">
         <br>
         <br>
         <a href="./FrontEnd/doctor1.php">Select</a>
       </div>
       <div class="places">
         <h2>Dr.Asunga Dunuwille</h2>
-        <img src="/Images/doctor3.jpg" style="width: 250px; height: 250px; border-radius: 12px;">
+        <img src="../Images/doctor3.jpg" style="width: 250px; height: 250px; border-radius: 12px;">
         <br>
         <br>
         <a href="doctor3.html">Select</a>
@@ -55,14 +55,14 @@
     <div class="tours">
       <div class="places">
         <h2>Dr.Tiran Dias</h2>
-        <img src="/Images/doctor4.jpg" style="width: 250px; height: 250px; border-radius: 12px;">
+        <img src="../Images/doctor4.jpg" style="width: 250px; height: 250px; border-radius: 12px;">
         <br>
         <br>
         <a href="doctor4.html">Select</a>
       </div>
       <div class="places">
         <h2>Dr.Hermoine Granger</h2>
-        <img src="/Images/doctor5.jpg" style="width: 250px; height: 250px; border-radius: 12px;">
+        <img src="../Images/doctor5.jpg" style="width: 250px; height: 250px; border-radius: 12px;">
         <br>
         <br>
         <a href="doctor5.html">Select </a>
@@ -71,7 +71,7 @@
 
       <div class="places">
         <h2>Dr.Harry</h2>
-        <img src="/Images/doctor6.jpg" style="width: 250px; height: 250px; border-radius: 12px;">
+        <img src="../Images/doctor6.jpg" style="width: 250px; height: 250px; border-radius: 12px;">
         <br>
         <br>
         <a href="doctor6.html">Select</a>
