--- a/FrontEnd/doctor3.html
+++ b/FrontEnd/doctor3.html
@@ -3,13 +3,16 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./CSS/navbar.css" />
-  <title>Navbar</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
+  <link rel="stylesheet" href="./CSS/doctor1.css" />
+  <title>Our project</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 
 <body>
+
   <section>
     <div class="menu-bar">
       <h1 class="logo">Sri Lankan's <span>Heart Center</span></h1>
@@ -18,8 +21,8 @@
           <a href="#">Home<i class="fas fa-caret-down"></i></a>
           <div class="dropdown-menu">
             <ul>
-              <li><a href="./FrontEnd/login.php">Login</a></li>
-              <li><a href="./FrontEnd/diseases.html">Diseases</a></li>
+              <li><a href="../FrontEnd/login.php">Login</a></li>
+              <li><a href="../FrontEnd/diseases.php">Diseases</a></li>
             </ul>
           </div>
         </li>
@@ -30,10 +33,10 @@
           <a href="#">Services<i class="fas fa-caret-down"></i></a>
           <div class="dropdown-menu">
             <ul>
-              <li><a href="./FrontEnd/doctor.html">Doctors</a></li>
+              <li><a href="../FrontEnd/doctor.php">Doctors</a></li>
               <li><a href="./FrontEnd/LAB.html">Lab reports</a></li>
               <li><a href="./FrontEnd/pharmacy.html">Pharmacy</a></li>
-              <li><a href="./FrontEnd/payment.html">Payments</a></li>
+              <li><a href="../FrontEnd/payment.php">Payments</a></li>
               <li><a href="./FrontEnd/channel_Dr.html">Channeling</a></li>
             </ul>
           </div>
@@ -54,7 +57,7 @@
           <a href="# ">Sign up<i class="fas fa-caret-down"></i></a>
           <div class="dropdown-menu">
             <ul>
-              <li><a href="./FrontEnd/docoty_signup.html">Doctor</a></li>
+              <li><a href="./FrontEnd/doctor_signup.html">Doctor</a></li>
               <li><a href="./FrontEnd/patient_reg.html ">Patient</a></li>
             </ul>
           </div>
@@ -62,6 +65,32 @@
       </ul>
     </div>
   </section>
+  <div class="hero">&nbsp;</div>
+
+
+  <!----------------------->
+
+  <div class="row">
+    <div class="column">
+      <div class="card">
+        <img src="/Images/doctor3.jpg" alt="Jane" style="width: 70%" />
+
+        <h2>Dr.Asunga Dunuwille</h2>
+        <p class="title">Cardiologist</p>
+        <p>
+          Registration Number:7459 <br />
+          Qualification: MBBS,MD,DM (cardiology)<br />
+          Business Phone Number: 0775678400<br />
+          Drasun@gmail.com <br />
+          Experience : 6 years<br />
+          Specialization : Cardiology<br />
+          Languages spoken: English,Sinhala<br />
+          Talks & publications: Faculty talk in National and International
+          level conferences.
+        </p>
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
