--- a/FrontEnd/doctor3.html
+++ b/FrontEnd/doctor3.html
@@ -1,96 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+    />
+    <link rel="stylesheet" href="../CSS/doctor1.css" />
+    <title>Our project</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
-  <link rel="stylesheet" href="./CSS/doctor1.css" />
-  <title>Our project</title>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-</head>
+  <body>
+    <section>
+      <div class="menu-bar">
+        <h1 class="logo">Sri Lankan's <span>Heart Center</span></h1>
+        <ul>
+          <li>
+            <a href="#">Home<i class="fas fa-caret-down"></i></a>
+            <div class="dropdown-menu">
+              <ul>
+                <li><a href="login.php">Login</a></li>
+                <li><a href="diseases.php">Diseases</a></li>
+              </ul>
+            </div>
+          </li>
+          <!--        ---------------------------------->
+          <li><a href="about_us.html">About us</a></li>
+          <!--        ==================---------------->
+          <li>
+            <a href="#">Services<i class="fas fa-caret-down"></i></a>
+            <div class="dropdown-menu">
+              <ul>
+                <li><a href="doctor.php">Doctors</a></li>
+                <li><a href="LAB.html">Lab reports</a></li>
+                <li><a href="pharmacy.html">Pharmacy</a></li>
+                <li><a href="payment.php">Payments</a></li>
+                <li><a href="channel_Dr.html">Channeling</a></li>
+              </ul>
+            </div>
+          </li>
+          <!--        ========================-->
+          <li><a href="contact.html">Contact us</a></li>
+          <!------------------------>
 
-<body>
+          <li>
+            <a href="feedback.html">Feedback</a>
+          </li>
 
-  <section>
-    <div class="menu-bar">
-      <h1 class="logo">Sri Lankan's <span>Heart Center</span></h1>
-      <ul>
-        <li>
-          <a href="#">Home<i class="fas fa-caret-down"></i></a>
-          <div class="dropdown-menu">
-            <ul>
-              <li><a href="../FrontEnd/login.php">Login</a></li>
-              <li><a href="../FrontEnd/diseases.php">Diseases</a></li>
-            </ul>
-          </div>
-        </li>
-        <!--        ---------------------------------->
-        <li><a href="/FrontEnd/about_us.html">About us</a></li>
-        <!--        ==================---------------->
-        <li>
-          <a href="#">Services<i class="fas fa-caret-down"></i></a>
-          <div class="dropdown-menu">
-            <ul>
-              <li><a href="../FrontEnd/doctor.php">Doctors</a></li>
-              <li><a href="./FrontEnd/LAB.html">Lab reports</a></li>
-              <li><a href="./FrontEnd/pharmacy.html">Pharmacy</a></li>
-              <li><a href="../FrontEnd/payment.php">Payments</a></li>
-              <li><a href="./FrontEnd/channel_Dr.html">Channeling</a></li>
-            </ul>
-          </div>
-        </li>
-        <!--        ========================-->
-        <li><a href="./FrontEnd/contact.html">Contact us</a></li>
-        <!------------------------>
+          <!---------------------->
+          <li><a href="map.html">Location</a></li>
 
-        <li>
-          <a href="./FrontEnd/feedback.html">Feedback</a>
-        </li>
+          <!--        --------------->
+          <li>
+            <a href="# ">Sign up<i class="fas fa-caret-down"></i></a>
+            <div class="dropdown-menu">
+              <ul>
+                <li><a href="doctor_signup.html">Doctor</a></li>
+                <li><a href="patient_reg.html ">Patient</a></li>
+              </ul>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <div class="hero">&nbsp;</div>
 
-        <!---------------------->
-        <li><a href="./FrontEnd/map.html">Location</a></li>
+    <!----------------------->
 
-        <!--        --------------->
-        <li>
-          <a href="# ">Sign up<i class="fas fa-caret-down"></i></a>
-          <div class="dropdown-menu">
-            <ul>
-              <li><a href="./FrontEnd/doctor_signup.html">Doctor</a></li>
-              <li><a href="./FrontEnd/patient_reg.html ">Patient</a></li>
-            </ul>
-          </div>
-        </li>
-      </ul>
-    </div>
-  </section>
-  <div class="hero">&nbsp;</div>
+    <div class="row">
+      <div class="column">
+        <div class="card">
+          <img src="../Images/doctor3.jpg" alt="Jane" style="width: 70%" />
 
-
-  <!----------------------->
-
-  <div class="row">
-    <div class="column">
-      <div class="card">
-        <img src="/Images/doctor3.jpg" alt="Jane" style="width: 70%" />
-
-        <h2>Dr.Asunga Dunuwille</h2>
-        <p class="title">Cardiologist</p>
-        <p>
-          Registration Number:7459 <br />
-          Qualification: MBBS,MD,DM (cardiology)<br />
-          Business Phone Number: 0775678400<br />
-          Drasun@gmail.com <br />
-          Experience : 6 years<br />
-          Specialization : Cardiology<br />
-          Languages spoken: English,Sinhala<br />
-          Talks & publications: Faculty talk in National and International
-          level conferences.
-        </p>
+          <h2>Dr.Asunga Dunuwille</h2>
+          <p class="title">Cardiologist</p>
+          <p>
+            Registration Number:7459 <br />
+            Qualification: MBBS,MD,DM (cardiology)<br />
+            Business Phone Number: 0775678400<br />
+            Drasun@gmail.com <br />
+            Experience : 6 years<br />
+            Specialization : Cardiology<br />
+            Languages spoken: English,Sinhala<br />
+            Talks & publications: Faculty talk in National and International
+            level conferences.
+          </p>
+        </div>
       </div>
     </div>
-  </div>
-</body>
-
+  </body>
 </html>
