--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -22,36 +22,36 @@
                     <a href="# ">Home<i class="fas fa-caret-down "></i></a>
                     <div class="dropdown-menu ">
                         <ul>
-                            <li><a href="./FrontEnd/login.html ">Login</a></li>
-                            <li><a href="./FrontEnd/diseases.php ">Diseases</a></li>
+                            <li><a href="login.html ">Login</a></li>
+                            <li><a href="diseases.html">Diseases</a></li>
                         </ul>
                     </div>
                 </li>
                 <!--        ---------------------------------->
-                <li><a href="./FrontEnd/about_us.html ">About us</a></li>
+                <li><a href="about_us.html ">About us</a></li>
                 <!--        ==================---------------->
                 <li>
                     <a href="# ">Services<i class="fas fa-caret-down "></i></a>
                     <div class="dropdown-menu ">
                         <ul>
-                            <li><a href="./FrontEnd/doctor.php ">Doctors</a></li>
-                            <li><a href="./FrontEnd/LAB.html ">Lab reports</a></li>
-                            <li><a href="./FrontEnd/pharmacy.html ">Pharmacy</a></li>
-                            <li><a href="./FrontEnd/payment.php ">Payments</a></li>
-                            <li><a href="./FrontEnd/channel_Dr.html ">Channeling</a></li>
+                            <li><a href="doctor.html ">Doctors</a></li>
+                            <li><a href="LAB.html ">Lab reports</a></li>
+                            <li><a href="pharmacy.html ">Pharmacy</a></li>
+                            <li><a href="payment.html ">Payments</a></li>
+                            <li><a href="channel_Dr.html ">Channeling</a></li>
                         </ul>
                     </div>
                 </li>
                 <!--        ========================-->
-                <li><a href="./FrontEnd/contact.html ">Contact us</a></li>
+                <li><a href="contact.html ">Contact us</a></li>
                 <!------------------------>
 
                 <li>
-                    <a href="./FrontEnd/feedback.html ">Feedback</a>
+                    <a href="feedback.html ">Feedback</a>
                 </li>
 
                 <!---------------------->
-                <li><a href="./FrontEnd/map.html ">Location</a></li>
+                <li><a href="map.html ">Location</a></li>
 
                 <!--        --------------->
                 <li>
