--- a/FrontEnd/privacy.html
+++ b/FrontEnd/privacy.html
@@ -3,136 +3,112 @@
 
 <head>
 
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
-  <link rel="stylesheet" href="./CSS/privacy.css" />
-  <title>Privacy Policy</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
+    <link rel="stylesheet" href="./CSS/privacy.css" />
+    <title>Privacy Policy</title>
 
 </head>
 
 <body>
 
-  <section>
-    <div class="menu-bar">
-      <h1 class="logo">Sri Lankan's <span>Heart Center</span></h1>
-      <ul>
-        <li>
-          <a href="#">Home<i class="fas fa-caret-down"></i></a>
-          <div class="dropdown-menu">
+    <section>
+        <div class="menu-bar">
+            <h1 class="logo">Sri Lankan's <span>Heart Center</span></h1>
             <ul>
-              <li><a href="../FrontEnd/login.php">Login</a></li>
-              <li><a href="../FrontEnd/diseases.php">Diseases</a></li>
+                <li>
+                    <a href="#">Home<i class="fas fa-caret-down"></i></a>
+                    <div class="dropdown-menu">
+                        <ul>
+                            <li><a href="login.php">Login</a></li>
+                            <li><a href="diseases.php">Diseases</a></li>
+                        </ul>
+                    </div>
+                </li>
+                <!--        ---------------------------------->
+                <li><a href="about_us.html">About us</a></li>
+                <!--        ==================---------------->
+                <li>
+                    <a href="#">Services<i class="fas fa-caret-down"></i></a>
+                    <div class="dropdown-menu">
+                        <ul>
+                            <li><a href="doctor.php">Doctors</a></li>
+                            <li><a href="LAB.html">Lab reports</a></li>
+                            <li><a href="pharmacy.html">Pharmacy</a></li>
+                            <li><a href="payment.php">Payments</a></li>
+                            <li><a href="channel_Dr.html">Channeling</a></li>
+                        </ul>
+                    </div>
+                </li>
+                <!--        ========================-->
+                <li><a href="contact.html">Contact us</a></li>
+                <!------------------------>
+
+                <li>
+                    <a href="feedback.html">Feedback</a>
+                </li>
+
+                <!---------------------->
+                <li><a href="map.html">Location</a></li>
+
+                <!--        --------------->
+                <li>
+                    <a href="# ">Sign up<i class="fas fa-caret-down"></i></a>
+                    <div class="dropdown-menu">
+                        <ul>
+                            <li><a href="doctor_signup.html">Doctor</a></li>
+                            <li><a href="patient_reg.html ">Patient</a></li>
+                        </ul>
+                    </div>
+                </li>
             </ul>
-          </div>
-        </li>
-        <!--        ---------------------------------->
-        <li><a href="/FrontEnd/about_us.html">About us</a></li>
-        <!--        ==================---------------->
-        <li>
-          <a href="#">Services<i class="fas fa-caret-down"></i></a>
-          <div class="dropdown-menu">
-            <ul>
-              <li><a href="../FrontEnd/doctor.php">Doctors</a></li>
-              <li><a href="./FrontEnd/LAB.html">Lab reports</a></li>
-              <li><a href="./FrontEnd/pharmacy.html">Pharmacy</a></li>
-              <li><a href="../FrontEnd/payment.php">Payments</a></li>
-              <li><a href="./FrontEnd/channel_Dr.html">Channeling</a></li>
-            </ul>
-          </div>
-        </li>
-        <!--        ========================-->
-        <li><a href="./FrontEnd/contact.html">Contact us</a></li>
-        <!------------------------>
+        </div>
+    </section>
+    <br><br>
+    <center>
+        <h1> Privacy Policy </h1>
+    </center>
+    <p>
+        <h3>Introduction</h3><br> This Privacy Policy (“Policy”) is designed to inform users about the use of Sri lankan heart website.It is also designed to inform users about how the website gathers and uses personal information submitted to it through
+        the Service.In this Policy, “user” or “you” means any person viewing the Service or submitting any personal information to the Company in connection with using the Service. In general, we will not collect, use, disclose, or otherwise process your
+        personal information without your consent.However, we may do so in certain circumstances described below. Our Privacy Policy may change from time to time, and any changes will be posted on this page. If the changes are significant, we will provide
+        a more prominent notice. If you have questions or concerns regarding the Privacy Policy,you should contact us at support@slhc.lk.
+        <br><br>
 
-        <li>
-          <a href="./FrontEnd/feedback.html">Feedback</a>
-        </li>
+        <h3>What Information Do We Collect and How Do We Collect It?</h3><br> We collect information from you when you require to contact us or to use our online payment portals.<br> Any of the information we collect from you may be used in one of the following
+        ways: -To personalize your experience (your information helps us to better respond to your individual needs)<br> -To improve our website (we continually strive to improve our website offerings based on the information and feedback we receive from
+        you)
+        <br> -To improve customer service (your information helps us to more effectively respond to your customer service requests and support needs)<br> -To process payment transactions.<br>
 
-        <!---------------------->
-        <li><a href="./FrontEnd/map.html">Location</a></li>
+        <h3> <br>Where and when is information collected from customers and end users?</h3>
+        Sri Lankan heart center will collect personal information that you submit to us.
+        <h3><br>How Do We Use Your Email Address?</h3>
+        By submitting your email address on this website, you agree to receive emails from us. We use your email address to send our feedbacks and payment related information.<br>
+        <h3><br>How Long Do We Keep Your Information?</h3>
+        We keep your information only so long as we need it to provide Sri Lankan heart center to you and fulfill the purposes described in this policy.
 
-        <!--        --------------->
-        <li>
-          <a href="# ">Sign up<i class="fas fa-caret-down"></i></a>
-          <div class="dropdown-menu">
-            <ul>
-              <li><a href="./FrontEnd/doctor_signup.html">Doctor</a></li>
-              <li><a href="./FrontEnd/patient_reg.html ">Patient</a></li>
-            </ul>
-          </div>
-        </li>
-      </ul>
-    </div>
-  </section>
-  <br><br>
-  <center>
-    <h1> Privacy Policy </h1>
-  </center>
-  <p>
-  <h3>Introduction</h3><br> This Privacy Policy (“Policy”) is designed to inform users about the use of Sri lankan heart
-  website.It is also designed to inform users about how the website gathers and uses personal information submitted to
-  it through
-  the Service.In this Policy, “user” or “you” means any person viewing the Service or submitting any personal
-  information to the Company in connection with using the Service. In general, we will not collect, use, disclose, or
-  otherwise process your
-  personal information without your consent.However, we may do so in certain circumstances described below. Our Privacy
-  Policy may change from time to time, and any changes will be posted on this page. If the changes are significant, we
-  will provide
-  a more prominent notice. If you have questions or concerns regarding the Privacy Policy,you should contact us at
-  support@slhc.lk.<br><br>
+        <h3><br>How Do We Protect Your Information?</h3>
+        We implement a variety of security measures to maintain the safety of your personal information when you place an order or enter, submit, or access your personal information. We offer the use of a secure server. After a transaction, your private information
+        (credit cards, financials, etc.) is never kept with us. Such information is directly handled by payment gateways.
 
-  <h3>What Information Do We Collect and How Do We Collect It?</h3><br> We collect information from you when you require
-  to contact us or to use our online payment portals.<br> Any of the information we collect from you may be used in one
-  of the following
-  ways: -To personalize your experience (your information helps us to better respond to your individual needs)<br> -To
-  improve our website (we continually strive to improve our website offerings based on the information and feedback we
-  receive from
-  you)
-  <br> -To improve customer service (your information helps us to more effectively respond to your customer service
-  requests and support needs)<br> -To process payment transactions.<br>
+        <h3><br>Is the information collected through the Sri lankan heart center secure?</h3>
 
-  <h3> <br>Where and when is information collected from customers and end users?</h3>
-  Sri Lankan heart center will collect personal information that you submit to us.
-  <h3><br>How Do We Use Your Email Address?</h3>
-  By submitting your email address on this website, you agree to receive emails from us. We use your email address to
-  send our feedbacks and payment related information.<br>
-  <h3><br>How Long Do We Keep Your Information?</h3>
-  We keep your information only so long as we need it to provide Sri Lankan heart center to you and fulfill the purposes
-  described in this policy.
+        We take precautions to protect the security of your information. We have physical, electronic, and managerial procedures to help safeguard, prevent unauthorized access, maintain data security, and correctly use your information. However, neither people
+        nor security systems are foolproof, including encryption systems. In addition, people can commit intentional crimes, make mistakes or fail to follow policies. Therefore, while we use reasonable efforts to protect your personal information, we
+        cannot guarantee its absolute security. If applicable law imposes any non-disclaimable duty to protect your personal information, you agree that intentional misconduct will be the standards used to measure our compliance with that duty.
 
-  <h3><br>How Do We Protect Your Information?</h3>
-  We implement a variety of security measures to maintain the safety of your personal information when you place an
-  order or enter, submit, or access your personal information. We offer the use of a secure server. After a transaction,
-  your private information
-  (credit cards, financials, etc.) is never kept with us. Such information is directly handled by payment gateways.
+        <h3><br>Payment Details</h3>
+        In respect to any payment processing details you have provided us, we commit that this confidential information will be stored in the most secure manner possible.
 
-  <h3><br>Is the information collected through the Sri lankan heart center secure?</h3>
+        <h3><br>Our Privacy Policy</h3>
+        We may change our Service and policies, and we may need to make changes to this Privacy Policy so that they accurately reflect our Service and policies. When you continue to use the Service, you will be bound by the updated Privacy Policy.
 
-  We take precautions to protect the security of your information. We have physical, electronic, and managerial
-  procedures to help safeguard, prevent unauthorized access, maintain data security, and correctly use your information.
-  However, neither people
-  nor security systems are foolproof, including encryption systems. In addition, people can commit intentional crimes,
-  make mistakes or fail to follow policies. Therefore, while we use reasonable efforts to protect your personal
-  information, we
-  cannot guarantee its absolute security. If applicable law imposes any non-disclaimable duty to protect your personal
-  information, you agree that intentional misconduct will be the standards used to measure our compliance with that
-  duty.
+        <h3><br>Effective Date
+            <br>14/01/2023
+        </h3>
 
-  <h3><br>Payment Details</h3>
-  In respect to any payment processing details you have provided us, we commit that this confidential information will
-  be stored in the most secure manner possible.
-
-  <h3><br>Our Privacy Policy</h3>
-  We may change our Service and policies, and we may need to make changes to this Privacy Policy so that they accurately
-  reflect our Service and policies. When you continue to use the Service, you will be bound by the updated Privacy
-  Policy.
-
-  <h3><br>Effective Date
-    <br>14/01/2023
-  </h3>
-
-  </p>
+    </p>
 </body>
 
 </html>
